--- a/index.css
+++ b/index.css
@@ -625,7 +625,7 @@ select:focus {
 }
 #Heading3 {
    color: #000000;
-   font-family: Montserrat;
+   font-family: "Avenir Next Cyr";
    font-size: 32px;
    font-style: normal;
    font-weight: bold;
