--- a/index.css
+++ b/index.css
@@ -310,7 +310,7 @@ select:focus {
    text-align: left;
 }
 #wb_Text1 {
-   color: #000000;
+   color: #FF7F50;
    font-family: "Avenir Next Cyr";
    font-size: 29px;
    font-weight: normal;
@@ -331,7 +331,7 @@ select:focus {
    text-align: left;
 }
 #wb_Text4 {
-   color: #000000;
+   color: #FF7F50;
    font-family: "Avenir Next Cyr";
    font-size: 21px;
    font-weight: normal;
@@ -450,7 +450,7 @@ select:focus {
    text-align: left;
 }
 #wb_Text14 {
-   color: #000000;
+   color: #FF7F50;
    font-family: "Avenir Next Cyr";
    font-size: 21px;
    font-weight: normal;
@@ -484,7 +484,7 @@ select:focus {
    text-align: left;
 }
 #wb_Text2 {
-   color: #000000;
+   color: #4F4F4F;
    font-family: "Avenir Next Cyr";
    font-size: 24px;
    font-weight: normal;
@@ -518,7 +518,7 @@ select:focus {
    text-align: left;
 }
 #wb_Text3 {
-   color: #000000;
+   color: #4169E1;
    font-family: "Avenir Next Cyr";
    font-size: 21px;
    font-weight: normal;
@@ -603,7 +603,7 @@ select:focus {
    text-align: left;
 }
 #wb_Text9 {
-   color: #000000;
+   color: #4169E1;
    font-family: "Avenir Next Cyr";
    font-size: 21px;
    font-weight: normal;
@@ -675,7 +675,7 @@ select:focus {
    text-align: left;
 }
 #wb_Text5 {
-   color: #000000;
+   color: #4F4F4F;
    font-family: "Avenir Next Cyr";
    font-size: 21px;
    font-weight: normal;
@@ -729,7 +729,7 @@ select:focus {
    text-align: left;
 }
 #wb_Text6 {
-   color: #000000;
+   color: #4F4F4F;
    font-family: "Avenir Next Cyr";
    font-size: 21px;
    font-weight: normal;
@@ -783,7 +783,7 @@ select:focus {
    text-align: left;
 }
 #wb_Text7 {
-   color: #000000;
+   color: #4F4F4F;
    font-family: "Avenir Next Cyr";
    font-size: 21px;
    font-weight: normal;
@@ -837,7 +837,7 @@ select:focus {
    text-align: left;
 }
 #wb_Text8 {
-   color: #000000;
+   color: #4F4F4F;
    font-family: "Avenir Next Cyr";
    font-size: 21px;
    font-weight: normal;
@@ -891,7 +891,7 @@ select:focus {
    text-align: left;
 }
 #wb_Text15 {
-   color: #000000;
+   color: #FF7F50;
    font-family: "Avenir Next Cyr";
    font-size: 21px;
    font-weight: normal;
@@ -945,7 +945,7 @@ select:focus {
    text-align: left;
 }
 #wb_Text16 {
-   color: #000000;
+   color: #FF7F50;
    font-family: "Avenir Next Cyr";
    font-size: 21px;
    font-weight: normal;
@@ -999,7 +999,7 @@ select:focus {
    text-align: left;
 }
 #wb_Text17 {
-   color: #000000;
+   color: #FF7F50;
    font-family: "Avenir Next Cyr";
    font-size: 21px;
    font-weight: normal;
@@ -1053,7 +1053,7 @@ select:focus {
    text-align: left;
 }
 #wb_Text10 {
-   color: #000000;
+   color: #4169E1;
    font-family: "Avenir Next Cyr";
    font-size: 21px;
    font-weight: normal;
@@ -1107,7 +1107,7 @@ select:focus {
    text-align: left;
 }
 #wb_Text11 {
-   color: #000000;
+   color: #4169E1;
    font-family: "Avenir Next Cyr";
    font-size: 21px;
    font-weight: normal;
@@ -1161,7 +1161,7 @@ select:focus {
    text-align: left;
 }
 #wb_Text12 {
-   color: #000000;
+   color: #4169E1;
    font-family: "Avenir Next Cyr";
    font-size: 21px;
    font-weight: normal;
